[package]
name = "monte-carlo"
version = "0.1.0"
edition = "2021"
description = "Monte Carlo engine — option pricing, portfolio VaR, and parallel simulation"

[lib]
name = "monte_carlo"
path = "src/lib.rs"

[[bin]]
name = "monte-carlo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
probability-engine = { path = "../02-probability-engine" }
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
