[package]
name = "bit-manipulator"
version = "0.1.0"
edition = "2021"
description = "Bit manipulation primitives — network packet parsing, binary protocol flags, TLS record headers"

[lib]
name = "bit_manipulator"
path = "src/lib.rs"

[[bin]]
name = "bit-manipulator"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
