[package]
name = "raw-socket"
version = "0.1.0"
edition = "2021"
description = "Raw socket packet parsing — Wireshark, Suricata, XDP, cloud virtual switches"

[lib]
name = "raw_socket"
path = "src/lib.rs"

[[bin]]
name = "raw-socket"
path = "src/main.rs"

[dependencies]
socket2 = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["net"] }
